--- a/SpringCRUDApp/src/main/webapp/WEB-INF/views/people/show.html
+++ b/SpringCRUDApp/src/main/webapp/WEB-INF/views/people/show.html
@@ -9,6 +9,8 @@
 
 <p th:text="${person.getName()}">VALUE</p>
 <p th:text="${person.getId()}">VALUE</p>
+<p th:text="${person.getAge()}">VALUE</p>
+<p th:text="${person.getEmail()}">VALUE</p>
 
 <br/>
 
